Alteração de texto

--- a/pags/calculadora.html
+++ b/pags/calculadora.html
@@ -14,7 +14,7 @@
                 <img src="/img/carro.png" alt="Logo Carro">
             </div>
             <div class="card-header">
-                <h2>CALCULADORA DE VALOR DA GASOLINA</h2>
+                <h2>CALCULADORA DO VALOR DA GASOLINA</h2>
             </div>
             <div class="card-content">
                 <div class="card-content-area">
